src/components/ui/OutputCard.css
.output{
    #random{
        --scale: 1.2;
        --rotate: 30deg;
        img{
            transform: scale(var(--scale)) rotate(var(--rotate));
        }

        &:hover:not(:disabled){
            --rotate: 390deg;
        }
    }

    #done{
        --translate1: .1em, -0.2em;
        --scale1: 0.9;

        --translate2: -0.1em, .1em;
        --scale2: 1.2;
        --rotate2: 30deg;
        img:first-of-type{
            
            transform: translate(var(--translate1)) scale(var(--scale1));
        }

        img:last-of-type{
            margin-left: -2em;
            
            transform: translate(var(--translate2)) scale(var(--scale2)) rotate(var(--rotate2));
            opacity: 0.8;
        }
        
        &:hover:not(:disabled){
            --translate1: .1em, -0.2em;
            --scale1: 1.05;

            --rotate2: 390deg;
        }
    }

    #reset:hover{
        img{
            transition-duration: var(--transition-duration-medium);
            transform: rotate(110deg);
        }
    }

    #add{
        --rotate: -360deg;
        img{
            transform: rotate(var(--rotate));
            transition-duration: var(--transition-duration-medium);
        }
        
        &:hover{
            --rotate: 360deg;
        }
    }
}

#course-select-wrapper{
    display: flex;
    flex-wrap: no-wrap;
    justify-content: center;
    gap: .5em;
    justify-items: center;

    width: 100%;
    height: 2.5em;

    margin-top: 1em;

    * {
        height: 100%;
    }
}

#checkboxes {
    display: flex;
    flex-wrap: wrap;
}

@media (max-width:900px) {
    .output{
        
        overflow: hidden;
        min-height: 80vh;

        /* On mobile this becomes a weird element, it takes up extra space to account for the timer */
        #control-panel {
            flex-direction: row-reverse;
            position: fixed;
            justify-content: center;

            width: 100%;
            height: 9em;
            left: 0;
            bottom: 0;

            padding: 5em 1.25em 1em 1.25em;
            border-radius: var(--default-border-radius) var(--default-border-radius) 0 0 !important;
            background-color: rgba(var(--backdrop-color),0.3);
            backdrop-filter: blur(var(--mild-border-radius));

            z-index: 2;
            --gap: .75em;

            button {
                max-width: 100%;
            }
        }
    }

    #output-wrapper {
        display: flex;
        flex-direction: column-reverse;

        text-align: center;
        word-break: break-word;

        #chapter {
            line-height: 1.5em;
        }

        #task-output{
            font-size: 2.5em;
            line-height: 1.25em;
            margin-top: 0;
            flex-basis: 2.5rem;
        }
    }

    #course-select-wrapper{
        flex-wrap: wrap;
    }

    #checkboxes {
        align-items: center;
        justify-content: center;
    }

    #checkbox-context {
        display: none;
    }
}

